Fix dark mode button.

--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
+    background-color: white;
+    color: black;
+}
+
+.dark-mode{
+    background-color: black;
+    color: white;
 }
 
 .container {
